style.css
body {
    background-color: #111111;
    font-family: sans-serif;
    color: #ffffff;
    width: 50%;
    margin: 0 auto;
}
body p {
    text-align: left;
}
a {
    text-decoration: none;
}
a:hover {
    text-decoration: underline;
}
:link {
    color: #87cefa;
}
:visited {
    color: #88c;
}
::selection {
    background-color: #3399ff;
    color: #ffffff;
}
nav {
    width: 100%;
}
nav a {
    position: relative;
    top: 10px;
}

